@@ -1,6 +1,7 @@
 from 1.8.1 to 1.8.2
 - lots of voip type casting fixes
-- context aware stack options
+- context aware stack, call, and message options complete
+- removed api splint macros!
 
 from 1.8.0 to 1.8.1
 - expose stack contexts directly to plugins
